--- a/styles.css
+++ b/styles.css
@@ -81,15 +81,15 @@ h1 {
 
 .video-explicativo h2 {
     margin-bottom: 15px;
-    color: #1565c0;
-    font-size: 1.5rem;
+    color: #111213;
+    font-size: 1.8rem;
 }
 
 .video-explicativo video {
     width: 90%;
     border-radius: 14px;
     border: 4px solid #e3f2fd;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+    box-shadow: 0 8px 20px rgba(97, 145, 190, 0.2);
 }
 
 .fade-in {
